<!--
  ~  Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~  This file is part of Akvo Caddisfly
  ~
  ~  Akvo Caddisfly is free software: you can redistribute it and modify it under the terms of
  ~  the GNU Affero General Public License (AGPL) as published by the Free Software Foundation,
  ~  either version 3 of the License or any later version.
  ~
  ~  Akvo Caddisfly is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~  without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~  See the GNU Affero General Public License included below for more details.
  ~
  ~  The full license text can also be seen at <http://www.gnu.org/licenses/agpl.html>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <org.akvo.caddisfly.util.PreferenceCategoryCustom android:title="@string/other">

        <ListPreference
            android:defaultValue="en"
            android:dialogTitle="@string/language"
            android:entries="@array/languages"
            android:entryValues="@array/language_codes"
            android:key="@string/languageKey"
            android:negativeButtonText="@string/cancel"
            android:summary="%s"
            android:title="@string/language" />

        <Preference
            android:key="checkUpdate"
            android:summary="@string/updateSummary"
            android:title="@string/updateCheck" />

        <Preference
            android:key="about"
            android:summary="@string/displaysVersionNumber"
            android:title="@string/about">
            <intent
                android:targetClass="org.akvo.caddisfly.ui.AboutActivity"
                android:targetPackage="org.akvo.caddisfly" />
        </Preference>

    </org.akvo.caddisfly.util.PreferenceCategoryCustom>
</PreferenceScreen>
